@@ -1,14 +1,14 @@
-# $NetBSD: Makefile,v 1.8 2018/07/28 14:40:47 brook Exp $
+# $NetBSD: Makefile,v 1.9 2019/07/31 19:21:32 brook Exp $
 
-CATEGORIES=	math
+CATEGORIES=	math R
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://cran.r-project.org/web/packages/e1071/index.html
 COMMENT=	Misc Functions of the Department of Statistics (e1071), TU Wien
-LICENSE=	gnu-gpl-v2
+LICENSE=	gnu-gpl-v2 OR gnu-gpl-v3
 
 R_PKGNAME=	e1071
-R_PKGVER=	1.6-8
+R_PKGVER=	1.7-2
 
 USE_LANGUAGES=	c c++
 
