@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.7 2018/01/17 18:43:10 minskim Exp $
+$NetBSD: distinfo,v 1.8 2019/07/31 19:21:32 brook Exp $
 
-SHA1 (R/e1071_1.6-8.tar.gz) = 97fa0397f4cff9371511a537614524c3ce248fb4
-RMD160 (R/e1071_1.6-8.tar.gz) = 852385b7d28ee88ce6749f5d2de286230f7ba92d
-SHA512 (R/e1071_1.6-8.tar.gz) = 302f1a5eea1ebaf10c764ae9dda55063199aa97ef2d0e18c413b37666e28b2481b2dcf1d6a78a284455aefe0cd48e43ad695de65caa09293f66ae93ec02a8d6d
-Size (R/e1071_1.6-8.tar.gz) = 581513 bytes
+SHA1 (R/e1071_1.7-2.tar.gz) = dc96a14b53c298f6d393f55c3a452b6ac9da07b5
+RMD160 (R/e1071_1.7-2.tar.gz) = 9b1ce120c3c42532226de22b1d7e03ef64db3f74
+SHA512 (R/e1071_1.7-2.tar.gz) = 381cf98649a3c3bde6ba9800cf59c66aa632af60ca6bc22deaebdb2a364ccbfb9a499de7ceb0b98026e79b438e719109dcc1ee4145a0737aff4eb44bdd016cdc
+Size (R/e1071_1.7-2.tar.gz) = 583003 bytes
